--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "discord.js": "^13.6.0",
     "dotenv": "^12.0.4",
+    "mongoose": "^6.2.0",
     "wokcommands": "^1.5.3"
   },
   "repository": {
